package edu.fiuba.algo3.modelo.Modificador;

public class SinModificador extends Modificador{
    @Override
    public void aplicarModificador() {

    }
}
